chore(apps): buf generate
